--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
 					<sourceDirectory>src/java</sourceDirectory>
 					<testSourceDirectory>test/src/java</testSourceDirectory>
 					-->
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -25,7 +25,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.sarge.lib</groupId>
-			<artifactId>sarge-lib</artifactId>
+			<artifactId>lib</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
