--- a/pom.xml
+++ b/pom.xml
@@ -65,17 +65,17 @@
 	</properties>
 	
 	<dependencies>
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.sarge.lib</groupId> -->
-<!-- 			<artifactId>lib</artifactId> -->
-<!-- 			<version>1.0.0-SNAPSHOT</version> -->
-<!-- 		</dependency> -->
-
 		<dependency>
 			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>3.7</version>
+			<artifactId>commons-collections4</artifactId>
+			<version>4.4</version>
 		</dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.11</version>
+        </dependency>
 
 		<dependency>
 			<groupId>net.java.dev.jna</groupId>
@@ -150,6 +150,7 @@
 			<version>5.0.1</version>
 			<scope>test</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
