--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,6 @@
 theme: jekyll-theme-minimal
+title: JOVE
+description: A Java implementation of the Vulkan API
+logo: /assets/image/logo.jpg
+show_downloads: false
+google_analytics:
