--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 # theme: jekyll-theme-minimal
 title: JOVE
 description: A Java implementation of the Vulkan API
-logo: /assets/image/logo.jpg
+logo: /JOVE/assets/image/logo.jpg
 show_downloads: false
 google_analytics:
 #markdown: kramdown
