--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,5 @@
 # theme: jekyll-theme-minimal
+theme: minima
 title: JOVE
 description: A Java implementation of the Vulkan API
 logo: /JOVE/assets/image/logo.jpg
