--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 theme: minima
 title: JOVE
 description: A Java implementation of the Vulkan API
-logo: /JOVE/assets/image/logo.jpg
 show_downloads: false
 google_analytics:
+base_url: /JOVE
