--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.sarge.jove</groupId>
-  <artifactId>JOVE</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  <name>JOVE</name>
-  <description>JOVE</description>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.sarge.jove</groupId>
+	<artifactId>JOVE</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+	<name>JOVE</name>
+	<description>JOVE</description>
+  
 	<build>
 		<plugins>
 			<plugin>
@@ -18,6 +19,8 @@
 					<compilerArgs>-XX:+ShowCodeDetailsInExceptionMessages</compilerArgs>
 				</configuration>
 			</plugin>
+			
+			<!--
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -54,8 +57,31 @@
 					</dependency>
 				</dependencies>
 			</plugin>
+			 -->
+
+<!--
+TODO - ant task? custom Mojo?
+			<plugin>
+			     <artifactId>maven-antrun-plugin</artifactId>
+			     <version>1.7</version>
+			     <executions>
+			         <execution>
+			             <phase>generate-sources</phase>
+			             <configuration>
+			                 <target>
+                                <exec dir="${project.basedir}/src/test/resources/demo" executable="" failonerror="true">
+                                </exec>
+                             </target>
+			             </configuration>
+			             <goals>
+			                 <goal>run</goal>
+			             </goals>
+			         </execution>
+			     </executions>
+			</plugin>
+-->
 		</plugins>
-	</build>
+ 	</build>
 	
 	<properties>
 	</properties>
@@ -112,7 +138,7 @@
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
-			<version>5.0.1</version>
+			<version>5.4.0</version>
 			<scope>test</scope>
 		</dependency>
 		
