--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,13 @@ TODO - ant task? custom Mojo?
 	</properties>
 	
 	<dependencies>
+	
+	   <dependency>
+	       <groupId>org.sarge.lib</groupId>
+			<artifactId>lib</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+	   </dependency>
+	
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-collections4</artifactId>
@@ -138,7 +145,7 @@ TODO - ant task? custom Mojo?
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
-			<version>5.4.0</version>
+			<version>5.7.0</version>
 			<scope>test</scope>
 		</dependency>
 		
