pipeline stage cloning

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ src/test/resources/demo/model/chalet.model
 src/test/resources/demo/model/chalet.model
 .classpath
 .classpath
+.classpath
+.classpath
