--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -11,3 +11,4 @@ java.util.logging.SimpleFormatter.format = %4$s [%2$s] %5$s %6$s %n
 #org.sarge.jove.foreign.level = INFO
 #org.sarge.jove.foreign.NativeRegistry.level = INFO
 #org.sarge.jove.foreign.NativeLibraryBuilder.level = INFO
+#org.sarge.jove.desktop.level = INFO
