--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 
     <properties>
 <!--        <java.version>23</java.version>-->
-        <maven.compiler.target>23</maven.compiler.target>
-        <maven.compiler.source>23</maven.compiler.source>
+        <maven.compiler.target>22</maven.compiler.target>
+        <maven.compiler.source>22</maven.compiler.source>
     </properties>
 
     <build>
@@ -18,9 +18,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
-                    <source>23</source>
-                    <target>23</target>
-                    <release>23</release>
+                    <source>22</source>
+                    <target>22</target>
+                    <release>22</release>
                     <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
@@ -51,15 +51,23 @@ https://stackoverflow.com/questions/34821047/java-lang-verifyerror-inconsistent-
             <artifactId>junit-jupiter</artifactId>
             <version>5.11.1</version>
             <scope>test</scope>
-     </dependency>
+        </dependency>
         
-        <!--
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>5.7.0</version>
+            <version>5.11.0</version>
             <scope>test</scope>
         </dependency>
-        -->
     </dependencies>
+
+    <dependencyManagement>
+    	<dependencies>
+    		<dependency>
+    			<groupId>net.bytebuddy</groupId>
+    			<artifactId>byte-buddy</artifactId>
+    			<version>1.14.18</version>
+    		</dependency>
+    	</dependencies>
+    </dependencyManagement>
 </project>
